--- a/src/Components/header.css
+++ b/src/Components/header.css
@@ -1,6 +1,9 @@
 ul {
     list-style: none;
     padding: 0px;
+    display: inline-flex;
+    
+    gap: 20px;
 }
 ul li {
     display: inline-block;
