--- a/src/Components/header.css
+++ b/src/Components/header.css
@@ -1,15 +1,33 @@
+* {
+    color: #FF6060;
+    padding: 10px;
+    padding-top: 5px;
+    font-family: 'Montserrat';
+    size: 24px;
+    font-weight: 500;
+    font-style: normal;
+}
+nav {
+    display: flex;
+    justify-content: space-between;
+}
 ul {
     list-style: none;
     padding: 0px;
-    display: inline-flex;
-    
     gap: 20px;
 }
 ul li {
     display: inline-block;
     margin-right: 20px;
 }
+li:hover {
+    text-decoration: underline 2px;
+}
 a{
     text-decoration: none;
-    color:black;
+}
+.App-logo {
+    width: 160px;
+    animation: none;
+    height: 60px;
 }
