--- a/src/Components/header.css
+++ b/src/Components/header.css
@@ -1,30 +1,27 @@
-* {
-    color: #FF6060;
-    padding: 10px;
+.Header{
+    width: 1240px;
+    height: auto;
+    padding: 20px;
     padding-top: 5px;
-    font-family: 'Montserrat';
-    size: 24px;
-    font-weight: 500;
-    font-style: normal;
 }
 nav {
     display: flex;
     justify-content: space-between;
 }
 ul {
+    display: flex;
     list-style: none;
     padding: 0px;
-    gap: 20px;
+    margin: 0px;
+    align-self: self-end;
 }
 ul li {
-    display: inline-block;
     margin-right: 20px;
+    display: inline;
 }
-li:hover {
-    text-decoration: underline 2px;
-}
-a{
+a {
     text-decoration: none;
+    color:#FF6060;
 }
 .App-logo {
     width: 160px;
