--- a/src/Pages/home.css
+++ b/src/Pages/home.css
@@ -1,3 +1,35 @@
-.banniere p{
-    color:white;
+.homep {
+    width: 1240px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    font-family: 'Montsierrat';
+    font-weight: 500;
+}
+
+.Banniere {
+    position: relative;
+    text-align: center;
+    color: white;
+    width: 1240px;
+    height: 223px;
+    align-items: center;
+}
+.banniereac {
+        border-radius: 25px;
+        filter: brightness(50%);
+}
+.banniere_text {
+    font-size: 48px;
+    position: absolute;
+    top: 50px;
+    left:50%;
+    transform:translate(-50%, -50%);
+}
+
+.card{
+    color: black;
+    size: 80px;
 }
