--- a/src/Pages/home.css
+++ b/src/Pages/home.css
@@ -42,4 +42,59 @@
     background-color: #F6F6F6;
     border-radius: 25px;
 }
+.background_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
 
+}
+
+
+.background-img {
+    border-radius: 25px;
+    max-width: 100%;
+    filter: brightness(60%);
+
+}
+
+.background-title {
+    z-index: 10;
+    position: absolute;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 48px;
+    line-height: 142.6%;
+    color: #FFFFFF;
+
+
+}
+
+.container_cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 50px;
+    padding-top: 45px;
+    padding-bottom: 45px;
+    padding-left: 2%;
+    padding-right: 2%;
+    background-color: #F6F6F6;
+    border-radius: 25px;
+
+}
+
+@media screen and (max-width: 768px) {
+    .container_cards {
+        flex-direction: column;
+        flex-wrap: nowrap;
+        gap: 20px;
+        background-color: white;
+    }
+
+    .background_container {
+        height: 110px;
+    }
+}
