--- a/src/Pages/logements.css
+++ b/src/Pages/logements.css
@@ -1,5 +1,9 @@
 .header-logement {
+    margin-top: 30px;
     color: #FF6060;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 20px;
 }
 
 .logement_title {
@@ -11,7 +15,16 @@
     font-size: 18px;
     margin-bottom: 20px;
 }
-.carrousel {
-    width: 1240px;
-    height: 415px;
+
+.header-logement_right {
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+    height: 100%;
+    align-self: center;
+}
+
+.description-equipements {
+    display: flex;
+    gap: 30px;
 }
