--- a/src/Components/collapse.css
+++ b/src/Components/collapse.css
@@ -1,5 +1,19 @@
+@media screen and (max-width: 768px) {
+    .collapse {
+        width: 100% !important;
+
+    }
+}
+
+
+.container-propos {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .collapse {
-    margin: auto;
     width: 90%;
     border-radius: 5px;
     margin-bottom: 33px;
@@ -39,7 +53,13 @@
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     color: #ff6060;
-    height: auto;
+    height: 75%;
     padding: 20px;
+    line-height: 142.6%;
+
+}
+
+.equipement_item {
+    list-style: none;
 
 }
