--- a/src/Components/logementsCart.css
+++ b/src/Components/logementsCart.css
@@ -1,13 +1,42 @@
-.header-logement {
-    color: #FF6060;
+.logement_card {
+    height: 300px;
+    width: 30%;
+    display: flex;
+    align-items: flex-end;
 }
 
-.logement_title {
-    font-size: 36px;
-    font-weight: 500;
+.img-cover {
+    border-radius: 10px;
+    height: 100%;
+    width: 100%;
+    filter: brightness(60%);
 }
 
-.logement_location {
-    font-size: 18px;
+.card-title {
+    padding-left: 10px;
+    display: flex;
+    max-width: 20%;
     margin-bottom: 20px;
+    color: white;
+    z-index: 10;
+    position: absolute;
+    font-size: 18px;
+}
+
+@media screen and (max-width: 768px) {
+    .logement_card {
+        height: 260px;
+        width: 100% !important;
+    }
+
+    .card-title {
+        max-width: 50%;
+    }
+}
+
+@media screen and (max-width: 1250px) {
+    .logement_card {
+        height: 260px;
+        width: 40%;
+    }
 }
