--- a/src/Pages/logements.css
+++ b/src/Pages/logements.css
@@ -28,3 +28,15 @@
     display: flex;
     gap: 30px;
 }
+.collapse{
+    width: 582px;
+    height: auto;
+}
+.collapse-header {
+    width: 582px ;
+    height: 52px;
+}
+.collapse_description {
+    border-radius: 10px;
+    height: 156px;
+}
