--- a/src/Components/collapse.css
+++ b/src/Components/collapse.css
@@ -53,7 +53,7 @@
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     color: #ff6060;
-    height: 75%;
+    height: auto;
     padding: 20px;
     line-height: 142.6%;
 
