--- a/src/Components/logementsCart.css
+++ b/src/Components/logementsCart.css
@@ -21,7 +21,10 @@
     z-index: 10;
     position: absolute;
     font-size: 18px;
+    width: 300px;
+    height: 52px;
 }
+
 
 @media screen and (max-width: 768px) {
     .logement_card {
