--- a/src/Components/styles.css
+++ b/src/Components/styles.css
@@ -25,8 +25,10 @@ h6 {
 }
 
 main {
+    display: flex;
     padding-left: 100px;
     padding-right: 100px;
+    margin: auto;
 }
 
 @media screen and (max-width: 768px) {
