--- a/src/Pages/apropos.css
+++ b/src/Pages/apropos.css
@@ -1,13 +1,10 @@
-.collapse-header {
-    width: 1023px;
-    height: 47px;
-}
-.collapse {
-    height: 130px;
-    width: 1023px;
-}
 .fleche-collapse img {
     width: 14px;
     height: 24px;
     transform: rotate(90deg);
 }
+.banniereap {
+    border-radius: 25px;
+    object-fit: cover;
+}
+
