--- a/src/Components/card.css
+++ b/src/Components/card.css
@@ -1,8 +1,10 @@
 .logement_card {
-    height: 300px;
-    width: 30%;
+    height: 340px;
+    width: 340px;
     display: flex;
     align-items: flex-end;
+    border-radius: 10px;
+    background :linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
 }
 
 .img-cover {
@@ -10,6 +12,7 @@
     height: 100%;
     width: 100%;
     filter: brightness(60%);
+    object-fit: cover;
 }
 
 .card-title {
