--- a/src/Components/logementsCart.css
+++ b/src/Components/logementsCart.css
@@ -1,14 +1,14 @@
 .logement_card {
-    height: 300px;
-    width: 30%;
+    height: 340px;
+    width: 340px;
     display: flex;
     align-items: flex-end;
 }
 
 .img-cover {
     border-radius: 10px;
-    height: 100%;
-    width: 100%;
+    height: 340px;
+    width: 340px;
     filter: brightness(60%);
 }
 
