--- a/src/Pages/home.css
+++ b/src/Pages/home.css
@@ -1,9 +1,12 @@
 main {
     margin: auto;
+    padding-left:50px ;
+    padding-right: 50px;
     font-family: 'Montserrat';
     font-weight: 500;
     max-width: 1400px;
 }
+
 .Banniere {
     position: relative;
     text-align: center;
@@ -14,14 +17,18 @@ main {
     display: flex;
     justify-content: center;
 }
+
 .Banniere img {
-    width: 1240px;
-    height: 223px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 25px;
 }
+
 .banniereac {
-        border-radius: 25px;
-        filter: brightness(50%);
+    filter: brightness(70%);
 }
+
 .banniere_text {
     margin: 0px;
     font-size: 48px;
@@ -32,13 +39,15 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 50px;
+    max-width: 1240px; 
+    padding-left: 50px;
+    padding-right: 50px;
+    gap : 50px;
     padding-top: 45px;
     padding-bottom: 45px;
-    padding-left: 30px;
-    padding-right: 30px;
-    background-color: #F7F7F7;
+    background-color: #F6F6F6;
     border-radius: 25px;
+
 }
 .background_container {
     display: flex;
@@ -70,19 +79,6 @@ main {
 
 }
 
-.container_cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 50px;
-    padding-top: 45px;
-    padding-bottom: 45px;
-    padding-left: 2%;
-    padding-right: 2%;
-    background-color: #F6F6F6;
-    border-radius: 25px;
-
-}
 
 @media screen and (max-width: 768px) {
     .container_cards {
