--- a/src/Components/header.css
+++ b/src/Components/header.css
@@ -12,7 +12,7 @@ nav {
     display: flex;
     justify-content: space-between;
 }
-ul {
+.Header ul {
     display: flex;
     list-style: none;
     padding: 0px;
