--- a/src/Components/card.css
+++ b/src/Components/card.css
@@ -18,11 +18,23 @@
 .card-title {
     padding-left: 10px;
     display: flex;
-    max-width: 20%;
+    /* max-width: 20%; */
+    max-width: 300px;
     height: 52px;
     color: white;
     z-index: 10;
     position: absolute;
     font-size: 18px;
     align-items: flex-end;
+}
+@media screen and (max-width: 768px) {
+
+   .logement_card{
+    width: 335px;
+    height: 255px;
+   }
+   .card-title{
+    width: 295px;
+    height: 52px;
+   }
 }
