--- a/src/Components/header.css
+++ b/src/Components/header.css
@@ -35,3 +35,9 @@ a:hover{
     animation: none;
     height: 60px;
 }
+@media screen and (max-width: 768px) {
+    .Header {
+        max-width: 768px;
+        min-width:400px;
+    }
+}
