--- a/src/Components/signature.css
+++ b/src/Components/signature.css
@@ -17,3 +17,16 @@
     height: 64px;
     border-radius: 40px;
 }
+@media screen and (max-width: 768px) {
+    .host_picture {
+        width: 36px;
+        height: 36px;
+
+    }
+
+    .host_name {
+
+        font-size: 15px;
+
+    }
+}
