--- a/src/Components/styles.css
+++ b/src/Components/styles.css
@@ -37,3 +37,9 @@ main {
         padding-right: 0;
     }
 }
+@media screen and (max-width: 1250px) {
+    main {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+}
