--- a/src/Components/tags.css
+++ b/src/Components/tags.css
@@ -20,3 +20,8 @@
     align-items: center;
     text-align: center;
 }
+@media screen and (max-width: 768px) {
+    .tags-list {
+        margin-bottom: 20px;
+    }
+}
