--- a/src/Components/header.css
+++ b/src/Components/header.css
@@ -38,6 +38,38 @@ a:hover{
 @media screen and (max-width: 768px) {
     .Header {
         max-width: 768px;
-        min-width:400px;
+        min-width:335px;
+        padding: 0px;
     }
+    .Header img{
+        width: 145px;
+    }
+    header{
+        min-width: 335px;
+        max-width: 768px;
+    }
+    nav {
+        max-width: 768px;
+        min-width: 335px;
+    }
+        .Banniere {
+            min-width: 335px;
+            max-width: 768px;
+            height: 111px;
+            justify-content: flex-start;
+            margin: 0px;
+        }
+    
+        .Banniere img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 25px;
+        }
+    
+        .banniere_text {
+            font-size: 24px;
+            width: 217px;
+            height: 48px;
+        }
 }
