--- a/src/Pages/apropos.css
+++ b/src/Pages/apropos.css
@@ -6,10 +6,35 @@
 .banniereap {
     border-radius: 25px;
     object-fit: cover;
+    filter: brightness(0.7);
 }
 .collapse{
     height: auto;
 }
 .collapse-header{
     height: 47px;
+}
+
+@media screen and (max-width: 768px) {
+
+    main {
+        max-width: 768px;
+        min-width: 300px;
+        padding: 15px;
+    }
+        .banniereap {
+            width: 100%;
+            height: 223px;
+            margin: 0px;
+        }
+        img {
+            width: 100%;
+        }
+
+        .collapse-header{
+            width: 100% !important;
+        }
+        .container-propos{
+            margin-top: 15px;
+        }
 }
