--- a/src/Pages/home.css
+++ b/src/Pages/home.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
 main {
     margin: auto;
     padding-left:50px ;
@@ -85,20 +88,38 @@ main {
     main  {
         max-width: 768px;
         min-width: 400px;
-    }
-    .container_cards {
-        max-width: 768px;
-        min-width: 400px;
-        margin:0px;
-        padding: 20px;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        gap: 20px;
-        background-color: white;
-        align-items: center;
+        padding: 0px;
     }
 
-    .background_container {
-        height: 110px;
-    }
+        .container_cards {
+            flex-direction: column;
+            flex-wrap: nowrap;
+            gap: 20px;
+            background-color: white;
+        }
+    
+        .background_container {
+            height: 110px;
+        }
+        .Banniere {
+            min-width: 335px;
+            max-width: 768px;
+            height: 111px;
+            margin: 0px;
+            text-align: left;
+            justify-content: flex-start;
+        }
+    
+        .Banniere img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 25px;
+        }
+                .banniere_text {
+                    font-size: 24px;
+                    width: 217px;
+                    height: 48px;
+                    padding-left: 15px;
+                }
 }
