--- a/src/Pages/layout.css
+++ b/src/Pages/layout.css
@@ -5,3 +5,11 @@
     margin: auto;
     padding: 20px;
 }
+@media all and (max-width: 812px) {
+
+    *{
+        width: 100%;
+        height: 100%;
+    }
+}
+
