--- a/src/Pages/logements.css
+++ b/src/Pages/logements.css
@@ -1,3 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
+@media screen and (max-width: 768px) {
+    .header-logement {
+        flex-direction: column;
+    }
+
+    .header-logement_right {
+        flex-direction: row-reverse !important;
+        align-items: center;
+        justify-content: space-between !important;
+        align-self: normal !important;
+    }
+
+    .description-equipements {
+        display: block !important;
+    }
+
+
+}
+
 .header-logement {
     margin-top: 30px;
     color: #FF6060;
@@ -26,7 +48,7 @@
 
 .logement_location {
     width: 176px;
-    height: 26px;
+    height: 46px;
     margin: 0px;
     font-size: 18px;
     margin-bottom: 5px;
@@ -42,6 +64,7 @@
 
 .description-equipements {
     display: flex;
+    justify-content: space-between;
     gap: 30px;
 }
 .collapse{
