--- a/src/_utils/error.css
+++ b/src/_utils/error.css
@@ -27,13 +27,20 @@
 
 /* MediaQueries */
 @media all and (max-width: 812px) {
+    .error_flex{
+        width: 100%;
+        height: 100%;
+    }
     .error_title {
         font-size: 96px;
     }
 
     .error_p {
         font-size: 18px;
+        width: 260px;
+        height: 52px;
         text-align: center;
+        margin-bottom: 140px;
     }
 
     .error_return {
