--- a/src/Components/header.css
+++ b/src/Components/header.css
@@ -40,6 +40,7 @@ a:hover{
         max-width: 768px;
         min-width:335px;
         padding: 0px;
+        padding-left: 20px;
     }
     .Header img{
         width: 145px;
