--- a/src/Pages/apropos.css
+++ b/src/Pages/apropos.css
@@ -1,3 +1,4 @@
+
 .fleche-collapse img {
     width: 14px;
     height: 24px;
@@ -7,6 +8,11 @@
     border-radius: 25px;
     object-fit: cover;
     filter: brightness(0.7);
+}
+.Banniereap{
+    padding-bottom: 40px;
+    display: flex;
+    justify-content: center;
 }
 .collapse{
     height: auto;
